import * as React from 'react';
import {Alert, ScrollView, StyleSheet} from 'react-native';
import {NativeStackNavigationOptions} from '@react-navigation/native-stack';
import {MessageDescriptor, defineMessages, useIntl} from 'react-intl';
import {useForm} from 'react-hook-form';
import {LoadingIndicator} from '../../../sharedComponents/LoadingIndicator';

import {NativeRootNavigationProps} from '../../../sharedTypes/navigation';
import {useOwnDeviceInfo, useSetOwnDeviceInfo} from '@comapeo/core-react';
import {BLACK} from '../../../lib/styles';
import {HookFormTextInput} from '../../../sharedComponents/HookFormTextInput';
import {IconButton} from '../../../sharedComponents/IconButton';
import SaveIcon from '../../../images/CheckMark.svg';
import {FieldRow} from './FieldRow';
import {expoToCoreDeviceType} from '../../../lib/deviceTypeMap';
import {deviceType} from 'expo-device';
import * as Sentry from '@sentry/react-native';

const m = defineMessages({
  title: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.title',
    defaultMessage: 'Device Name',
  },
  deviceNameLabel: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.deviceNameLabel',
    defaultMessage: 'Edit Device Name',
  },
  discardChangesAlertTitle: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.discardChangesAlertTitle',
    defaultMessage: 'Discard changes?',
  },
  discardChangesAlertConfirmText: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.discardChangesAlertConfirmText',
    defaultMessage: 'Discard Changes',
  },
  discardChangesAlertCancelText: {
    id: '$1screens.Setting.ProjectSettings.DeviceName.EditScreen.discardChangesAlertCancelText',
    defaultMessage: 'Continue Editing',
  },
});

export function createNavigationOptions({
  intl,
}: {
  intl: (title: MessageDescriptor) => string;
}) {
  return (): NativeStackNavigationOptions => {
    return {
      headerTitle: intl(m.title),
      animation: 'none',
      headerRight: () => (
        <IconButton onPress={() => {}}>
          <SaveIcon />
        </IconButton>
      ),
    };
  };
}

export const EditScreen = ({
  navigation,
}: NativeRootNavigationProps<'DeviceNameEdit'>) => {
  const {formatMessage: t} = useIntl();

  const {data} = useOwnDeviceInfo();

  const deviceName = data?.name;

  const {control, getValues, handleSubmit, formState} = useForm<{
    deviceName: string;
  }>({defaultValues: {deviceName}});

  const {mutate, status} = useSetOwnDeviceInfo();
  const isPending = status === 'pending';

  const {isDirty: nameHasChanges} = control.getFieldState(
    'deviceName',
    formState,
  );

  React.useEffect(
    function showDiscardChangesAlert() {
      const unsubscribe = navigation.addListener('beforeRemove', event => {
        // Ignore cases where navigation after successful submission occurs
        if (event.data.action.type !== 'GO_BACK') return;

        if (!nameHasChanges) return;

        event.preventDefault();

        Alert.alert(t(m.discardChangesAlertTitle), undefined, [
          {style: 'cancel', text: t(m.discardChangesAlertCancelText)},
          {
            style: 'default',
            text: t(m.discardChangesAlertConfirmText),
            onPress: () => {
              navigation.dispatch(event.data.action);
            },
          },
        ]);
      });

      return () => {
        unsubscribe();
      };
    },
    [t, navigation, getValues, nameHasChanges],
  );

  const onSubmit = React.useMemo(() => {
    return handleSubmit(value => {
      if (!nameHasChanges) {
        navigation.popTo('DeviceNameDisplay');
        return;
      }
      mutate(
        {
          name: value.deviceName,
          deviceType: expoToCoreDeviceType(deviceType),
        },
        {
          onSuccess: () => {
            navigation.popTo('DeviceNameDisplay');
          },
          onError: err => {
            Sentry.captureException(err);
            navigation.navigate('ErrorBottomSheet', {error: err});
          },
        },
      );
    });
  }, [handleSubmit, mutate, nameHasChanges, navigation]);

  React.useEffect(
    function updateNavigationOptions() {
      navigation.setOptions({
        headerRight: () => {
          return isPending ? (
            <IconButton>
              <LoadingIndicator size="large" />
            </IconButton>
          ) : (
            <IconButton testID="save-icon" onPress={onSubmit}>
              <SaveIcon />
            </IconButton>
          );
        },
      });
    },
    [navigation, isPending, onSubmit],
  );

  return (
    <ScrollView contentContainerStyle={styles.container}>
      <FieldRow label={t(m.deviceNameLabel)}>
        <HookFormTextInput
          testID="edit-device-name"
          control={control}
          name="deviceName"
          rules={{maxLength: 60, required: true, minLength: 1}}
          // TODO: Update HookFormTextInput implementation so that either:
          // - the implementation fully determines the text input's base style and this component doesn't allow custom styling
          // - this style prop is properly merged with the text input's base style in the implementation
          style={{flex: 1, color: BLACK, fontSize: 16}}
          showCharacterCount
          autoFocus
          editable={!isPending}
        />
      </FieldRow>
    </ScrollView>
  );
};

const styles = StyleSheet.create({
  container: {
    paddingHorizontal: 20,
    paddingVertical: 40,
  },
});
