...
          <View
            style={{flexDirection: 'row', alignItems: 'center', marginTop: 20}}>
            <Text style={{fontWeight: '500'}}>{t(m.header)}</Text>
            <Text style={{color: RED}}>*</Text>
          </View>
          <TextInput
            testID="ONBOARDING.device-name-inp"
            style={[
              styles.textInput,
              {borderColor: !errorTimeout ? LIGHT_GREY : RED},
            ]}
            value={name}
            onChangeText={setNameWithValidation}
...
          <View style={styles.greyBox}>
            <Text>{t(m.description)}</Text>
          </View>
        </View>

        <Button
          testID="ONBOARDING.add-name-btn"
          fullWidth
          onPress={handleAddNamePress}>
          {t(m.addName)}
        </Button>
      </TouchableWithoutFeedback>
    </KeyboardAvoidingView>
...
