...
import {NativeRootNavigationProps} from '../../sharedTypes/navigation';
import {PrimaryButton, SecondaryButton} from '../../sharedComponents/Buttons';

const m = defineMessages({
  title: {
    id: 'screens.AudioSavedBottomSheet.title',
    defaultMessage: 'Success!',
  },
  subTitle: {
    id: 'screens.AudioSavedBottomSheet.subTitle',
    defaultMessage: 'Your Audio Recording was added',
  },
  returnToEditor: {
...
