...
          />
        )}
      </View>
      {dimensions && (
        <Map
          key={mapKey}
          testID="MAIN.mapbox-map-view"
          style={{width: dimensions.width, height: dimensions.height}}
          logo={false}
          touchPitch={false}
          touchRotate={false}
          attributionPosition={{right: 8, bottom: 8}}
          compass={false}
...
